--- a/config.toml
+++ b/config.toml
@@ -35,7 +35,7 @@ googleAnalytics = "UA-16386425-2" # Enable Google Analytics by entering your tra
   list = "right"   # Configure layout for list pages
   single = false # Configure layout for single pages
   # Enable widgets in given order
-  widgets = ["search", "social"]
+  widgets = ["search", "categories", "social"]
 
 [Params.widgets]
   recent_num = 5 # Set the number of articles in the "Recent articles" widget
