--- a/config.toml
+++ b/config.toml
@@ -13,8 +13,8 @@ googleAnalytics = "UA-16386425-2" # Enable Google Analytics by entering your tra
 
 [Params]
   description = "A little bit about a lot of stuff." # Description of your site
+  copyright = "David Garrett"
   opengraph = true
-  twitter_cards = false
   readmore = false # Show "Read more" button in list if true
   pager = true
   post_meta = ["date", "categories"] # Order of post meta information
@@ -49,7 +49,12 @@ googleAnalytics = "UA-16386425-2" # Enable Google Analytics by entering your tra
 [[Params.widgets.social.custom]]
   title = "Reddit"
   url = "https://www.reddit.com/u/carpedavid"
-  icon = "reddit-brands.svg" # Optional. Path relative to "layouts/partials"
+  icon = "reddit.svg" # Optional. Path relative to "layouts/partials"
+
+[[Params.widgets.social.custom]]
+  title = "Mastodon"
+  url = "https://dice.camp/@carpedavid"
+  icon = "mastodon.svg" # Optional. Path relative to "layouts/partials"
 
 [taxonomies]
   tag = "tags"
